Respect the user given version for python and use the choice input in asdf action as well

--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -9,9 +9,14 @@ inputs:
     required: false
     default: ""
   version:
-    type: string
+    type: choice
     required: true
-    default: "latest"
+    description: Selects the level of updates available for this action
+    options:
+      - latest
+      - lts
+      - minor-updates # Semver minor updates from MAJOR.MINOR.PATCH
+      - patch-updates # Semver patch updates from MAJOR.MINOR.PATCH
   release_notes:
     type: string
     required: true
