--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -97,6 +97,18 @@ runs:
         jq ".packages.\"\".engines.node = \"^${{ env.LATEST_VERSION }}\" | .packages.\"\".engines.npm = \"^$BUNDLED_NPM_VERSION\"" $LOCK_JSON > updated-package-lock.json
         mv updated-package.json $PACKAGE_JSON
         mv updated-package-lock.json $LOCK_JSON
+    
+    - name: Update latest python version to pyproject.toml if it exists
+      if: ${{ inputs.plugin == 'python' && env.CURRENT_VERSION != env.LATEST_VERSION }}
+      shell: bash
+      run: |
+        test -f pyproject.toml && \
+        sed -i "s/^python =.*/python = \"^${{ env.LATEST_VERSION }}\"/" pyproject.toml && \
+        asdf plugin-add python && \
+        asdf plugin-add poetry && \
+        asdf install python && \
+        asdf install poetry && \
+        poetry lock --no-update
 
     # This is using the version 4.2.3
     # Reference the repository with SHA for security
