--- a/update-nodejs/action.yml
+++ b/update-nodejs/action.yml
@@ -27,3 +27,5 @@ runs:
         version: '${{ inputs.version }}'
         package_json_prefix: '${{ inputs.package_json_prefix }}'
         release_notes: "https://github.com/nodejs/node/blob/main/doc/changelogs/CHANGELOG_V$MAJOR_VERSION.md#$LATEST_VERSION"
+        # Github actions doesn't support array items so we just concatenate these
+        add_extra_files_to_pr: '*package.json, *package-lock.json'
