--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -119,8 +119,8 @@ runs:
       shell: bash
       run: |
         test -f pyproject.toml && \
-        sed -i "s/^poetry =.*/poetry = \"^${{ env.LATEST_VERSION }}\"/" pyproject.toml && \
         asdf install poetry && \
+        poetry version ${{ env.LATEST_VERSION }} && \
         poetry lock --no-update
 
     # This is using the version 4.2.3
