--- a/update-poetry/action.yml
+++ b/update-poetry/action.yml
@@ -20,3 +20,5 @@ runs:
         plugin: poetry
         version: '${{ inputs.version }}'
         release_notes: "https://github.com/python-poetry/poetry/releases/tag/$LATEST_VERSION"
+        # Use similiar PR labels as Dependabot is using
+        github_pullrequest_label: 'python,poetry'
