--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -136,5 +136,5 @@ runs:
         branch: 'update/${{ inputs.plugin }}/${{ env.LATEST_VERSION }}'
         body: 'See release notes in: ${{ env.RELEASE_NOTES }}'
         delete-branch: true
-        labels: 'update,enhancement'
+        labels: 'dependencies,${{ inputs.github_pullrequest_labels }}'
         author: 'GitHub <noreply@github.com>'
