Forgot to add the python label as well

--- a/update-python/action.yml
+++ b/update-python/action.yml
@@ -19,7 +19,10 @@ runs:
       with:
         plugin: python
         docker_image: python
+        
         version: '${{ inputs.version }}'
         release_notes: "https://docs.python.org/$MINOR_VERSION/whatsnew/changelog.html#python-$LATEST_VERSION_WITH_DASHES-final"
         # Github actions doesn't support array items so we just concatenate these
         add_extra_files_to_pr: '*pyproject.toml, *poetry.lock'
+        # Use similiar PR labels as Dependabot is using
+        github_pullrequest_labels: 'python'
