add lock file and .toml when updating poetry

--- a/update-poetry/action.yml
+++ b/update-poetry/action.yml
@@ -22,3 +22,4 @@ runs:
         release_notes: "https://github.com/python-poetry/poetry/releases/tag/$LATEST_VERSION"
         # Use similiar PR labels as Dependabot is using
         github_pullrequest_extra_labels: 'python,poetry'
+        add_extra_files_to_pr: '*poetry.lock'
