--- a/knipadmin/action.yml
+++ b/knipadmin/action.yml
@@ -4,6 +4,15 @@ inputs:
   token:
     description: 'Auth token'
     required: true
+  repo:
+    description: 'Repository name'
+    required: true
+  owner:
+    description: 'Owner'
+    required: true
+  branch:
+    description: 'Branch to look out for'
+    required: true
 runs:
   using: 'node20'
   main: 'target/index.js'
