--- a/knipadmin/package.json
+++ b/knipadmin/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12"
+    "@types/node": "^20.12.12",
+    "tsx": "^4.11.0"
   }
 }
