--- a/knipadmin/tsconfig.json
+++ b/knipadmin/tsconfig.json
@@ -7,7 +7,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true
   },
-  "files": ["./src/main.ts"]
+  "includes": [
+    "src"
+  ]
 }
