Use poetry lock without the flag for poetry 2.0+

--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -123,7 +123,7 @@ runs:
         sed -i "s/^python =.*/python = \"${{ env.LATEST_VERSION }}\"/" pyproject.toml && \
         asdf install python && \
         asdf install poetry && \
-        poetry lock --no-update
+        [ "$(grep poetry .tool-versions | cut -d' ' -f2 | cut -d '.' -f1)" -eq "1" ] && poetry lock --no-update || poetry lock
     - name: Update latest poetry version to pyproject.toml if it exists
       if: ${{ inputs.plugin == 'poetry' && env.CURRENT_VERSION != env.LATEST_VERSION }}
       shell: bash
@@ -131,8 +131,7 @@ runs:
         test -f pyproject.toml && \
         asdf install poetry  && \
         poetry version ${{ env.LATEST_VERSION }} && \
-        poetry lock --no-update
-
+        [ "$(grep poetry .tool-versions | cut -d' ' -f2 | cut -d '.' -f1)" -eq "1" ] && poetry lock --no-update || poetry lock
     # This is using the version 6.1.0 https://github.com/peter-evans/create-pull-request/issues/2790
     # Reference the repository with SHA for security
     # Source: https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-third-party-actions
