Fixes asdf poetry & python upgrade action (#43)
## Description

Python & Poetry upgrades have not been working for a longer time. This
PR fix the issue by:

1. Updating `asdf-vm/actions/plugins-add` to the newest version. Old SHA
was pointing to the version which was already ~2 years old.
2. Using `poetry lock` instead of `poetry lock --no-update` for poetry
version 2+ as nowadays poetry defaults to no-update on `poetry lock` and
support for that flag was removed.
3. Removing trailing 't' from python version returned by `asdf latest
python` (experimental free threading). `asdf latest python` returns for
example `3.13.3t` instead of 3.13.3 for python 3.13+. t This causes
installation to fail due missing packages. At this point we don’t need
to install variant of experimental support for free threading.

Additionally, the PR adds also `major` to the `version` options for
visibility. It was missing from the listing even though the code assumed
it to be one of the options.


## Checklist
- [ ] After merging this I have tested this by manually triggering the
action in one of the internal projects

--- a/update-asdf-and-dockerfile/action.yml
+++ b/update-asdf-and-dockerfile/action.yml
@@ -20,6 +20,7 @@ inputs:
     options:
       - latest
       - lts
+      - major # Semver major updates from MAJOR.MINOR.PATCH
       - minor # Semver minor updates from MAJOR.MINOR.PATCH
       - patch # Semver patch updates from MAJOR.MINOR.PATCH
   release_notes:
@@ -44,29 +45,30 @@ runs:
     # Refer to external action with git commit SHA for security.
     # Source: https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-third-party-actions
     - name: ASDF Setup plugins
-      uses: asdf-vm/actions/plugins-add@6844d09b13209e7d2ce3b63d2b089a2acef581ec
+      uses: asdf-vm/actions/plugins-add@9cd779f40fe38688dd19505ccbc4eaaf018b44e7
     - name: Get current version from asdf
       shell: bash
       run: echo "CURRENT_VERSION=$(grep "^${{ inputs.plugin }}" .tool-versions | cut -d' ' -f2)" >> $GITHUB_ENV
     - name: Get latest version from asdf
-      if: ${{ inputs.version == 'major' }}
+      if: ${{ contains(fromJSON('["major", "minor", "patch"]'), inputs.version) }}
       shell: bash
       run: |
-        LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}")
-        echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
-    - name: Get latest minor version from asdf
-      if: ${{ inputs.version == 'minor' }}
-      shell: bash
-      run: |
-        CURRENT_MINOR_VERSION=$(echo ${{ env.CURRENT_VERSION }} | cut -d '.' -f 1)
-        LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}" $CURRENT_MINOR_VERSION)
-        echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
-    - name: Get latest patch version from asdf
-      if: ${{ inputs.version == 'patch' }}
-      shell: bash
-      run: |
-        CURRENT_PATCH_VERSION=$(echo ${{ env.CURRENT_VERSION }} | cut -d '.' -f 1,2)
-        LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}" $CURRENT_PATCH_VERSION)
+        if [ "${{ inputs.version }}" == 'minor' ]; then
+          LOOK_UP_VERSION=$(echo ${{ env.CURRENT_VERSION }} | cut -d '.' -f 1)
+        elif [ "${{ inputs.version }}" == 'patch' ]; then
+          LOOK_UP_VERSION=$(echo ${{ env.CURRENT_VERSION }} | cut -d '.' -f 1,2)
+        else
+          LOOK_UP_VERSION='' # Do not define lookup version for major version upgrade
+        fi
+
+        LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}" ${LOOK_UP_VERSION})
+
+        if [ "${{ inputs.plugin }}" == 'python' ]; then
+          # Remove trailing 't' from version number for python which asdf latest is returning.
+          # t refers to a experimental free-threaded mode and the version causes issues on installation
+          LATEST_VERSION=$(echo $LATEST_VERSION | sed 's/t$//')
+        fi
+
         echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
     # NodeJS has LTS versions
     - name: Get newest NodeJS LTS version
@@ -123,7 +125,7 @@ runs:
         sed -i "s/^python =.*/python = \"${{ env.LATEST_VERSION }}\"/" pyproject.toml && \
         asdf install python && \
         asdf install poetry && \
-        poetry lock --no-update
+        [ "$(echo ${LATEST_VERSION} | cut -d '.' -f1)" -eq "1" ] && poetry lock --no-update || poetry lock
     - name: Update latest poetry version to pyproject.toml if it exists
       if: ${{ inputs.plugin == 'poetry' && env.CURRENT_VERSION != env.LATEST_VERSION }}
       shell: bash
@@ -131,8 +133,7 @@ runs:
         test -f pyproject.toml && \
         asdf install poetry  && \
         poetry version ${{ env.LATEST_VERSION }} && \
-        poetry lock --no-update
-
+        [ "$(echo ${LATEST_VERSION} | cut -d '.' -f1)" -eq "1" ] && poetry lock --no-update || poetry lock
     # This is using the version 6.1.0 https://github.com/peter-evans/create-pull-request/issues/2790
     # Reference the repository with SHA for security
     # Source: https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-third-party-actions
